@@ -1,20 +1,22 @@
 package com.pinup.domain.friend.service;
 
-import com.pinup.domain.member.dto.response.MemberResponse;
 import com.pinup.domain.friend.entity.FriendShip;
+import com.pinup.domain.friend.repository.FriendShipRepository;
+import com.pinup.domain.member.dto.response.MemberResponse;
 import com.pinup.domain.member.entity.Member;
+import com.pinup.domain.member.repository.MemberRepository;
+import com.pinup.global.common.AuthUtil;
 import com.pinup.global.exception.EntityNotFoundException;
 import com.pinup.global.response.ErrorCode;
-import com.pinup.global.common.AuthUtil;
-import com.pinup.domain.friend.repository.FriendShipRepository;
-import com.pinup.domain.member.repository.MemberRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
@@ -25,15 +27,28 @@ public class FriendShipService {
     private final AuthUtil authUtil;
 
     @Transactional(readOnly = true)
-    public List<MemberResponse> getAllFriendsOfMember(Long memberId) {
+    public Page<MemberResponse> getAllFriendsOfMember(Long memberId, Pageable pageable) {
         Member member = memberRepository.findById(memberId)
                 .orElseThrow(() -> new EntityNotFoundException(ErrorCode.MEMBER_NOT_FOUND));
 
-        return friendShipRepository.findAllByMember(member)
-                .stream()
+        List<MemberResponse> memberResponses = friendShipRepository.findAllByMember(member).stream()
                 .map(friendShip -> MemberResponse.from(friendShip.getFriend()))
                 .sorted(Comparator.comparing(MemberResponse::getNickname))
-                .collect(Collectors.toList());
+                .toList();
+
+        return new PageImpl<>(memberResponses, pageable, memberResponses.size());
+    }
+
+    @Transactional(readOnly = true)
+    public Page<MemberResponse> getAllFriendsOfMe(Pageable pageable) {
+        Member loginMember = authUtil.getLoginMember();
+
+        List<MemberResponse> memberResponses = friendShipRepository.findAllByMember(loginMember).stream()
+                .map(friendShip -> MemberResponse.from(friendShip.getFriend()))
+                .sorted(Comparator.comparing(MemberResponse::getNickname))
+                .toList();
+
+        return new PageImpl<>(memberResponses, pageable, memberResponses.size());
     }
 
     @Transactional
